<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AyeshaprojectV2</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle" translatable="false">Register</string>
    <string name="signInBtn">Sign In</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="email">Username</string>
    <string name="emailHint">Enter your username</string>
    <string name="password">Password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="currentPassword">Current Password</string>
    <string name="currentPasswordHint">Enter your current password</string>
    <string name="newPassword">New Password</string>
    <string name="newPasswordHint">Enter your new password</string>
    <string name="settingsTitle">Settings</string>
    <string name="existingSongsTitle">Existing Songs</string>
    <string name="logoutBtn"  translatable="false">Logout</string>
    <string name="savePasswordBtn">Save Password</string>
    <string name="topArtistsTitle">Top Artists</string>
    <string name="searchResults">Search Results</string>
    <string name="searchHint">Search for Songs</string>
    <string name="searchBtn">Search</string>
    <string name="startBackgroundService">Start Background Service</string>
    <string name="selectSongToPlay">Select any song to play</string>
    <string name="registerInstead">Register Instead</string>
    <string name="loginInstead">Login Instead</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>